mobile menu done

--- a/css/style.css
+++ b/css/style.css
@@ -426,25 +426,93 @@ header {
 
   .menu-text ul.navigation-menu {
     text-align: right; }
-    .menu-text ul.navigation-menu li a {
+    .menu-text ul.navigation-menu li a#toggleMenuMobile {
       position: relative;
       z-index: 99; }
     .menu-text ul.navigation-menu ul#toggleMenuItem {
-      position: fixed;
-      background-color: #545454;
+      position: absolute;
+      text-align: left;
       width: 100%;
       height: 100%;
-      top: 0;
+      top: 100px;
       left: 0;
-      padding-left: 200px;
       opacity: 0;
       display: none;
       visibility: hidden;
-      transition: all 0.5s ease; }
+      transition: all 0.5s ease;
+      padding: 50px 15px; }
       .menu-text ul.navigation-menu ul#toggleMenuItem.active {
         display: block;
         opacity: 1;
-        visibility: visible; } }
+        visibility: visible;
+        width: 100%;
+        background-color: white;
+        height: 100vh; }
+      .menu-text ul.navigation-menu ul#toggleMenuItem li {
+        margin: 20px 0; }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a {
+          font-size: 20px;
+          font-weight: 500;
+          color: #828282;
+          display: flex; }
+          .menu-text ul.navigation-menu ul#toggleMenuItem li a i {
+            margin-right: 10px;
+            padding: 20px 10px;
+            vertical-align: middle;
+            font-size: 20px;
+            line-height: 27px;
+            border-radius: 50px; }
+          .menu-text ul.navigation-menu ul#toggleMenuItem li a span {
+            padding: 15px 30px;
+            line-height: 34px;
+            display: inline-block;
+            width: 90%;
+            border-radius: 50px; }
+          .menu-text ul.navigation-menu ul#toggleMenuItem li a.active i {
+            color: #0601ff;
+            background: rgba(85, 82, 255, 0.06); }
+          .menu-text ul.navigation-menu ul#toggleMenuItem li a.active span {
+            color: #0601ff;
+            background: rgba(85, 82, 255, 0.06); } }
+@media (min-width: 0px) and (max-width: 576px) {
+  header a.logo {
+    height: unset;
+    width: 100px; }
+  header .menu-md {
+    display: none; }
+  header .menu-mob {
+    display: block; }
+
+  .menu-text ul.navigation-menu ul#toggleMenuItem {
+    padding: 30px 15px; }
+    .menu-text ul.navigation-menu ul#toggleMenuItem li {
+      margin: 10px 0; }
+      .menu-text ul.navigation-menu ul#toggleMenuItem li a {
+        font-size: 16px; }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a i {
+          margin-right: 7px;
+          padding: 20px 10px;
+          font-size: 16px;
+          line-height: 24px;
+          border-radius: 30px; }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a span {
+          padding: 12px 20px;
+          line-height: 39px;
+          display: inline-block;
+          width: 90%;
+          border-radius: 30px; }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a.active i {
+          color: #0601ff;
+          background: rgba(85, 82, 255, 0.06); }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a.active span {
+          color: #0601ff;
+          background: rgba(85, 82, 255, 0.06); }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a:hover i {
+          color: #0601ff;
+          background: rgba(85, 82, 255, 0.06); }
+        .menu-text ul.navigation-menu ul#toggleMenuItem li a:hover span {
+          color: #0601ff;
+          background: rgba(85, 82, 255, 0.06); } }
 /** ============================ Responsive CSS End ============================ **/
 /** == Feature Section CSS Start == **/
 .feature-section .single-feature {
