--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -122,29 +122,143 @@ header {
         text-align: right;
         li {
           a {
-            position: relative;
-            z-index: 99;
+            &#toggleMenuMobile {
+              position: relative;
+              z-index: 99;
+            }
           }
         }
         ul {
           &#toggleMenuItem {
-            position: fixed;
-            background-color: $dark-gray;
+            position: absolute;
+            text-align: left;
             width: 100%;
             height: 100%;
-            top: 0;
+            top: 100px;
             left: 0;
-
-            padding-left: 200px;
             opacity: 0;
             display: none;
             visibility: hidden;
             transition: all 0.5s ease;
+            padding: 50px 15px;
 
             &.active {
               display: block;
               opacity: 1;
               visibility: visible;
+              width: 100%;
+              background-color: white;
+              height: 100vh;
+            }
+
+            li {
+              margin: 20px 0;
+              a {
+                font-size: 20px;
+
+                font-weight: 500;
+                color: $gray-semi;
+                display: flex;
+
+                i {
+                  margin-right: 10px;
+                  padding: 20px 10px;
+                  vertical-align: middle;
+                  font-size: 20px;
+                  line-height: 27px;
+                  border-radius: 50px;
+                }
+                span {
+                  padding: 15px 30px;
+                  line-height: 34px;
+                  display: inline-block;
+                  width: 90%;
+                  border-radius: 50px;
+                }
+
+                &.active {
+                  i {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                  span {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//Extra Small Device CSS start
+@media (min-width: 0px) and (max-width: 576px) {
+  header {
+    a {
+      &.logo {
+        height: unset;
+        width: 100px;
+      }
+    }
+    .menu-md {
+      display: none;
+    }
+    .menu-mob {
+      display: block;
+    }
+  }
+
+  .menu-text {
+    ul {
+      &.navigation-menu {
+        ul {
+          &#toggleMenuItem {
+            padding: 30px 15px;
+            li {
+              margin: 10px 0;
+              a {
+                font-size: 16px;
+                i {
+                  margin-right: 7px;
+                  padding: 20px 10px;
+                  font-size: 16px;
+                  line-height: 24px;
+                  border-radius: 30px;
+                }
+                span {
+                  padding: 12px 20px;
+                  line-height: 39px;
+                  display: inline-block;
+                  width: 90%;
+                  border-radius: 30px;
+                }
+
+                &.active {
+                  i {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                  span {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                }
+
+                &:hover {
+                  i {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                  span {
+                    color: $blue;
+                    background: rgba(85, 82, 255, 0.06);
+                  }
+                }
+              }
             }
           }
         }
