--- a/css/scss/common/_icon.scss
+++ b/css/scss/common/_icon.scss
@@ -1,5 +1,5 @@
 $route: "../fonts/";
-$fontCode: "3euu6r";
+$fontCode: "mrghzi";
 
 @font-face {
   font-family: "icomoon";
@@ -31,6 +31,9 @@ $fontCode: "3euu6r";
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-ground-floor:before {
+  content: "\e91b";
+}
 .icon-unit-prices:before {
   content: "\e918";
 }
@@ -43,14 +46,14 @@ $fontCode: "3euu6r";
 .icon-hours-24:before {
   content: "\e911";
 }
-.icon-ground-floor:before {
-  content: "\e91b";
-}
 .icon-dollies-handcarts:before {
   content: "\e915";
 }
 .icon-online-pay:before {
   content: "\e917";
+}
+.icon-contact-msg:before {
+  content: "\e901";
 }
 .icon-one:before {
   content: "\e900";
