--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -5,7 +5,7 @@ Contact Us Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.contact-us-banner {
-    .banner-container {
+    .container {
       min-height: 320px;
       background-image: linear-gradient(
           180deg,
@@ -75,7 +75,7 @@ Contact Us Page CSS End
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 450px;
       }
     }
@@ -87,7 +87,7 @@ Contact Us Page CSS End
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 400px;
       }
     }
@@ -131,7 +131,7 @@ Contact Us Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 350px;
       }
     }
@@ -170,7 +170,7 @@ Contact Us Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 300px;
       }
     }
