--- a/css/scss/components/_faqs.scss
+++ b/css/scss/components/_faqs.scss
@@ -4,7 +4,7 @@ FAQs Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.faqs-banner {
-    .banner-container {
+    .container {
       min-height: 320px;
       background-image: linear-gradient(
           180deg,
@@ -77,7 +77,7 @@ FAQs Page CSS End
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
     &.faqs-banner {
-      .banner-container {
+      .container {
         min-height: 450px;
       }
     }
@@ -89,7 +89,7 @@ FAQs Page CSS End
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
     &.faqs-banner {
-      .banner-container {
+      .container {
         min-height: 400px;
       }
     }
@@ -112,7 +112,7 @@ FAQs Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.faqs-banner {
-      .banner-container {
+      .container {
         min-height: 350px;
       }
     }
@@ -148,7 +148,7 @@ FAQs Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     &.faqs-banner {
-      .banner-container {
+      .container {
         min-height: 300px;
       }
     }
