--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -130,12 +130,12 @@ header {
         }
         ul {
           &#toggleMenuItem {
-            position: absolute;
+            position: fixed;
             text-align: left;
-            width: 100%;
-            height: 100%;
+            width: 0;
+            height: 100vh;
             top: 100px;
-            left: 0;
+            left: -500px;
             opacity: 0;
             display: none;
             visibility: hidden;
@@ -147,8 +147,10 @@ header {
               opacity: 1;
               visibility: visible;
               width: 100%;
+              left: 0;
               background-color: white;
               height: 100vh;
+              transition: 0.5s;
             }
 
             li {
