--- a/css/scss/components/_home.scss
+++ b/css/scss/components/_home.scss
@@ -5,7 +5,7 @@ Home Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   padding: 20px 15px;
-  .banner-container {
+  .container {
     background-image: linear-gradient(
         180deg,
         rgba(6, 6, 6, 0.5),
@@ -32,7 +32,7 @@ Home Page CSS Start
     }
     p {
       margin-top: 20px;
-      font-size: 24px;
+      font-size: 20px;
       color: white;
     }
     .cta-btn {
@@ -126,7 +126,7 @@ Home Page CSS End
 //Medium Device CSS start
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
-    .banner-container {
+    .container {
       min-height: 500px;
       p {
         font-size: 20px;
@@ -178,7 +178,7 @@ Home Page CSS End
 //Small Device CSS start
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
-    .banner-container {
+    .container {
       min-height: 350px;
       p {
         margin-top: 5px;
@@ -196,7 +196,7 @@ Home Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     padding: 15px 10px;
-    .banner-container {
+    .container {
       padding: 0 20px;
       min-height: 350px;
       p {
