--- a/css/scss/components/_nearby.scss
+++ b/css/scss/components/_nearby.scss
@@ -5,7 +5,7 @@ Nearby Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.nearby-banner {
-    .banner-container {
+    .container {
       min-height: 450px;
       background-image: linear-gradient(
           180deg,
@@ -28,7 +28,7 @@ Nearby Page CSS End
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 450px;
       }
     }
@@ -40,7 +40,7 @@ Nearby Page CSS End
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 400px;
       }
     }
@@ -52,7 +52,7 @@ Nearby Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 350px;
       }
     }
@@ -64,7 +64,7 @@ Nearby Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     &.nearby-banner {
-      .banner-container {
+      .container {
         min-height: 300px;
       }
     }
