--- a/css/scss/components/_size-guide.scss
+++ b/css/scss/components/_size-guide.scss
@@ -5,7 +5,7 @@ Size Guide Page CSS Start
 /** == Banner Section CSS Start == **/
 .banner-section {
   &.size-guide-banner {
-    .banner-container {
+    .container {
       min-height: 450px;
       background-image: linear-gradient(
           180deg,
@@ -93,7 +93,7 @@ Size Guide Page CSS End
 @media (min-width: 0px) and (max-width: 1200px) {
   .banner-section {
     &.size-guide-banner {
-      .banner-container {
+      .container {
         min-height: 450px;
       }
     }
@@ -105,7 +105,7 @@ Size Guide Page CSS End
 @media (min-width: 0px) and (max-width: 992px) {
   .banner-section {
     &.size-guide-banner {
-      .banner-container {
+      .container {
         min-height: 400px;
       }
     }
@@ -174,7 +174,7 @@ Size Guide Page CSS End
 @media (min-width: 0px) and (max-width: 768px) {
   .banner-section {
     &.size-guide-banner {
-      .banner-container {
+      .container {
         min-height: 350px;
       }
     }
@@ -294,7 +294,7 @@ Size Guide Page CSS End
 @media (min-width: 0px) and (max-width: 576px) {
   .banner-section {
     &.size-guide-banner {
-      .banner-container {
+      .container {
         min-height: 300px;
       }
     }
